<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.westerveld.merik.sm_te4_practicum.MainActivity"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@android:color/black">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="95dp"
        app:srcCompat="@drawable/boef"
        android:id="@+id/imageView"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:contentDescription ="@string/image_view_of_the_criminal"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/TableRow_Color"
                android:layout_marginBottom="10dp">

                <TextView
                    android:text="@string/Name_Of_Criminal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtName"
                    android:textColor="@color/GreenTextColor"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etName"
                    android:textColor="@color/GreenTextColor"
                    android:layout_marginLeft="30dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/TableRow_Color"
                android:layout_marginBottom="10dp">

                <TextView
                    android:text="@string/Gender_Of_Criminal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtGender"
                    android:textColor="@color/GreenTextColor"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etGender"
                    android:textColor="@color/GreenTextColor"
                    android:layout_marginLeft="30dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/TableRow_Color"
                android:layout_marginBottom="10dp">

                <TextView
                    android:text="@string/Age_Of_Criminal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAge"
                    android:textColor="@color/GreenTextColor"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etAge"
                    android:textColor="@color/GreenTextColor"
                    android:layout_marginLeft="30dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/TableRow_Color"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:text="@string/Bounty_Of_Criminal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtBounty"
                    android:textColor="@color/GreenTextColor"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etBounty"
                    android:textColor="@color/GreenTextColor"
                    android:layout_marginLeft="30dp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/Details"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                android:id="@+id/txtDetails"
                android:textColor="@color/GreenTextColor" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:id="@+id/svDetails">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:text="@string/Details_Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:textColor="@color/GreenTextColor"
                        android:textSize="18dp"/>
                </LinearLayout>

            </ScrollView>

            <Button
                android:text="@string/Report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnReport" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
